--- a/txtbranch/Base.lproj/Main.storyboard
+++ b/txtbranch/Base.lproj/Main.storyboard
@@ -270,7 +270,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYN-xm-MJY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1206" y="-1498"/>
+            <point key="canvasLocation" x="1292" y="-1697"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="8EQ-3n-Vcs">
@@ -316,6 +316,7 @@
                     <connections>
                         <segue destination="1u2-bx-reu" kind="push" identifier="Notifications" id="37G-N1-jio"/>
                         <segue destination="T5l-1F-r3a" kind="push" identifier="TreesView" id="TVY-Yy-7qF"/>
+                        <segue destination="JQD-Zh-GYX" kind="push" identifier="Inbox" id="W5w-r1-Jby"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r0m-Fu-QQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1226,6 +1227,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qpq-d8-1cH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1408" y="1336"/>
+        </scene>
+        <!--Inbox Table View Controller-->
+        <scene sceneID="O7S-TV-zW9">
+            <objects>
+                <tableViewController storyboardIdentifier="InboxTableViewController" id="JQD-Zh-GYX" customClass="InboxTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="22" sectionFooterHeight="22" id="G5s-dj-vUz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NotificationTableViewCell" rowHeight="55" id="Jxh-Mj-CXO" customClass="NotificationTableViewCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="55"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jxh-Mj-CXO" id="dT8-E5-Mmt">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username added &quot;Hello World&quot; to TheTreeOfLife" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AFM-L9-taz" customClass="TTTAttributedLabel">
+                                            <rect key="frame" x="20" y="0.0" width="300" height="54"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="JQD-Zh-GYX" id="Ch7-Dy-sHP"/>
+                                            </connections>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="attributedLabel" destination="AFM-L9-taz" id="0rS-ZT-Wfw"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JQD-Zh-GYX" id="t8M-T6-U4K"/>
+                            <outlet property="delegate" destination="JQD-Zh-GYX" id="R3H-Yb-YT5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="kRa-G6-7Uy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dMg-va-2Co" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1820" y="-1385"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
